[gd_scene load_steps=20 format=3 uid="uid://u5qng31o4xat"]

[ext_resource type="Script" path="res://scenes/characters/enemies/static_enemy.gd" id="1_0ndbu"]
[ext_resource type="PackedScene" uid="uid://bbo5oxxfcowee" path="res://scenes/projectiles/enemy_bullet_round.tscn" id="2_51wvm"]
[ext_resource type="PackedScene" uid="uid://dn6dkghyx5fp" path="res://scenes/effects/smoke_generator.tscn" id="2_63t46"]
[ext_resource type="Shader" path="res://scenes/characters/player/hit.gdshader" id="3_wnoss"]
[ext_resource type="Texture2D" uid="uid://iaqt2efaoqpt" path="res://sprites/enemy_plant_shooter.png" id="5_j4uxe"]
[ext_resource type="Texture2D" uid="uid://bcr71ogla1xaw" path="res://sprites/enemy_plant_shoot_base.png" id="6_dh51n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c8lxd"]
resource_local_to_scene = true
shader = ExtResource("3_wnoss")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_63sed"]
atlas = ExtResource("5_j4uxe")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_8l0nw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63sed")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_axo3h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qpf7y"]
resource_name = "hover"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1), Vector2(0, 0), Vector2(0, -1)]
}

[sub_resource type="Animation" id="Animation_m2nwp"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.366667),
"transitions": PackedFloat32Array(1.03527, 1, 4.14106),
"update": 0,
"values": [Vector2(0.7, 1.4), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h68e1"]
_data = {
"RESET": SubResource("Animation_axo3h"),
"hover": SubResource("Animation_qpf7y"),
"shoot": SubResource("Animation_m2nwp")
}

[sub_resource type="Animation" id="Animation_2swfp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7qkde"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.267943, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 0.6), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"setShader"
}, {
"args": [false],
"method": &"setShader"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uyx11"]
_data = {
"RESET": SubResource("Animation_2swfp"),
"hit": SubResource("Animation_7qkde")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mk2sf"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1ny0"]
size = Vector2(16, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f26d7"]
size = Vector2(20, 5)

[node name="StaticEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_0ndbu")
bullet = ExtResource("2_51wvm")
new_rotation = 90.0
end_angle = 135.0

[node name="SmokeGenerator" parent="." instance=ExtResource("2_63t46")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_c8lxd")
sprite_frames = SubResource("SpriteFrames_8l0nw")
autoplay = "default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_h68e1")
}
autoplay = "hover"

[node name="SpriteAnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_uyx11")
}
autoplay = "RESET"

[node name="BounceTimer" type="Timer" parent="."]
one_shot = true

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mk2sf")

[node name="HurtArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("RectangleShape2D_i1ny0")

[node name="JumpHitBox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpHitBox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_f26d7")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4

[node name="DetectionCollisionPolygon" type="CollisionPolygon2D" parent="DetectionArea"]

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
rotation = -1.5708
texture = ExtResource("6_dh51n")

[connection signal="body_entered" from="HurtArea" to="." method="_on_hurt_area_body_entered"]
[connection signal="body_exited" from="HurtArea" to="." method="_on_hurt_area_body_exited"]
[connection signal="body_shape_entered" from="JumpHitBox" to="." method="_on_jump_hit_box_body_shape_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
